updated column name for subcategory

--- a/ETL_Mini_Project_RJothis_REsser.ipynb
+++ b/ETL_Mini_Project_RJothis_REsser.ipynb
@@ -468,7 +468,7 @@
    "source": [
     "# Assign the category and subcategory values to category and subcategory columns.\n",
     "\n",
-    "crowdfunding_info_df[[\"category\", \"sub-category\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split(\n",
+    "crowdfunding_info_df[[\"category\", \"subcategory\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split(\n",
     "    \"/\", n=1, expand=True)\n",
     "\n",
     "crowdfunding_info_df.head()\n"
@@ -497,7 +497,7 @@
     "# Get the unique categories and subcategories in separate lists.\n",
     "\n",
     "categories = crowdfunding_info_df[\"category\"].unique()\n",
-    "subcategories = crowdfunding_info_df[\"sub-category\"].unique()\n",
+    "subcategories = crowdfunding_info_df[\"subcategory\"].unique()\n",
     "print(categories)\n",
     "print(subcategories)"
    ]
@@ -584,7 +584,7 @@
     "\n",
     "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
     "\n",
-    "subcategory_df = pd.DataFrame({\"subcategory_id\" : scat_ids, \"sub-category\" : subcategories})"
+    "subcategory_df = pd.DataFrame({\"subcategory_id\" : scat_ids, \"subcategory\" : subcategories})"
    ]
   },
   {
@@ -1754,7 +1754,7 @@
     "\n",
     "campaign_merged_df=pd.merge(campaign_df, category_df, on='category')\n",
     "\n",
-    "campaign_merged_df=pd.merge(campaign_merged_df, subcategory_df, on='sub-category')\n",
+    "campaign_merged_df=pd.merge(campaign_merged_df, subcategory_df, on='subcategory')\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
